Base page styles

--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
   <meta name="fragment" content="!" />
 
   <title>ng2-prism</title>
+  <link rel="stylesheet" href="jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
+  <link rel="stylesheet" href="app/assets/base.css">
 </head>
 <body>
-  <ng2-prism-app>Loading...</ng2-prism-app>
+  <header>
+    <div class="container">
+      <h1>ng2-prism</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quo inventore provident nesciunt, laudantium nisi tenetur dolores iure. Amet deleniti quasi, voluptates vel accusamus aspernatur quaerat sapiente delectus suscipit reprehenderit!</p>
+    </div>
+  </header>
+  <div class="main">
+    <div class="container">
+      <ng2-prism-app>Loading...</ng2-prism-app>
+    </div>
+  </div>
+  <footer>
+    <div class="container"></div>
+  </footer>
   <script src="app/main.js"></script>
 </body>
 
