--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="container">
       <h1>ng2-prism</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quo inventore provident nesciunt, laudantium nisi tenetur dolores iure. Amet deleniti quasi, voluptates vel accusamus aspernatur quaerat sapiente delectus suscipit reprehenderit!</p>
+      <h3 class="subtitle">An Angular2 Code Highlighting Component using PrismJS</h3>
     </div>
   </header>
   <div class="main">
