--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="/ng2-prism/">
+  <base href="/">
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="apple-mobile-web-app-capable" content="YES"/>
@@ -10,8 +10,8 @@
   <meta name="fragment" content="!" />
 
   <title>ng2-prism</title>
-  <link rel="stylesheet" href="jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
-  <link rel="stylesheet" href="app/assets/base.css">
+  <link rel="stylesheet" href="ng2-prism/jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
+  <link rel="stylesheet" href="ng2-prism/app/assets/base.css">
 </head>
 <body>
   <header>
@@ -28,7 +28,7 @@
   <footer>
     <div class="container"></div>
   </footer>
-  <script src="app/main.js"></script>
+  <script src="ng2-prism/app/main.js"></script>
 </body>
 
 </html>
