Remove other references to ng2-prism besides base href

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="fragment" content="!" />
 
   <title>ng2-prism</title>
-  <link rel="stylesheet" href="ng2-prism/jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
-  <link rel="stylesheet" href="ng2-prism/app/assets/base.css">
+  <link rel="stylesheet" href="jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
+  <link rel="stylesheet" href="app/assets/base.css">
 </head>
 <body>
   <header>
@@ -28,7 +28,7 @@
   <footer>
     <div class="container"></div>
   </footer>
-  <script src="ng2-prism/app/main.js"></script>
+  <script src="app/main.js"></script>
 </body>
 
 </html>
