--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
   <title>ng2-prism</title>
   <link rel="stylesheet" href="jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="app/assets/base.css">
 </head>
 <body>
   <header>
     <div class="container">
       <h1>ng2-prism</h1>
+      <a class="github button" href="http://github.com/tpadjen/ng2-prism"><i class="fa fa-github"></i>View on Github</a>
       <h3 class="subtitle">An Angular2 Code Highlighting Component using PrismJS</h3>
     </div>
   </header>
