--- a/index-dev.html
+++ b/index-dev.html
@@ -24,7 +24,12 @@
   </header>
   <div class="main">
     <div class="container">
-      <ng2-prism-app>Loading...</ng2-prism-app>
+      <ng2-prism-app>
+        <div class="spinner">
+          <div class="double-bounce1"></div>
+          <div class="double-bounce2"></div>
+        </div>
+      </ng2-prism-app>
     </div>
   </div>
   <footer>
