--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <div class="container">
       <h1>ng2-prism</h1>
-      <a class="github button" href="http://github.com/tpadjen/ng2-prism"><i class="fa fa-github"></i>View on Github</a>
+      <a class="github button" href="http://github.com/tpadjen/ng2-prism"><i class="fa fa-github"></i>View on GitHub</a>
       <h3 class="subtitle">An Angular2 Code Highlighting Component using PrismJS</h3>
     </div>
   </header>
