--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     </div>
   </div>
   <footer>
-    <div class="container"></div>
+    <div class="container">
+      <div class="grow">
+        <a href="http://github.com/tpadjen"><img src="app/assets/img/identicon.png" class="identicon"></a>
+      </div>
+      <span class="made-with">Made with <i class="fa fa-heart"></i> by <a href="http://github.com/tpadjen">Tim Padjen</a></span>
+    </div>
   </footer>
   <script src="app/main.js"></script>
 </body>
