--- a/index-dev.html
+++ b/index-dev.html
@@ -11,6 +11,7 @@
 
   <title>ng2-prism</title>
   <link rel="stylesheet" href="jspm_packages/github/necolas/normalize.css%403.0.3/normalize.css">
+  <link rel="stylesheet" href="node_modules/animate.css/animate.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="app/assets/base.css">
 </head>
